fix(positioning): bump the z-index to 200 so it appears over nav

--- a/src/client/styles/layout/popover.scss
+++ b/src/client/styles/layout/popover.scss
@@ -3,7 +3,7 @@
  **********/
 .popover {
 	position: absolute;
-	z-index: 100;
+	z-index: 200;
 	max-width: 276px;
 	width: -moz-max-content; // firefox
 	width: max-content;
